apps/search-server/overlays/prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: search-server-middleware
  namespace: prod
spec:
  stripPrefix:
    prefixes:
      - /api/v1/search
